<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/dimens_16dp">

    <ImageView
        android:id="@+id/img_images"
        android:layout_width="@dimen/dimens_100dp"
        android:layout_height="@dimen/dimens_150dp"
        android:elevation="@dimen/dimens_4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginLeft="@dimen/dimens_16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10dp"
                android:layout_marginLeft="@dimen/dimens_10dp"
                android:text="@string/lorem_ipsum"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_date" />

            <TextView
                android:id="@+id/tv_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10dp"
                android:layout_marginLeft="@dimen/dimens_10dp"
                android:text="@string/lorem_ipsum"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_pages" />

            <TextView
                android:id="@+id/tv_total_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10dp"
                android:layout_marginLeft="@dimen/dimens_10dp"
                android:text="@string/lorem_ipsum"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:text="@string/lorem_ipsum" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>