<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_16dp">

            <ImageView
                android:id="@+id/img_images"
                android:layout_width="@dimen/dimens_150dp"
                android:layout_height="@dimen/dimens_250dp"
                android:elevation="@dimen/dimens_4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_16dp"
                android:layout_marginLeft="@dimen/dimens_16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:layout_marginBottom="@dimen/dimens_20dp"
                    android:text="@string/lorem_ipsum"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_total_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_isbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/dimens_4dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="15sp"
            android:textAlignment="gravity"/>

    </LinearLayout>

</ScrollView>